added Toast Service + removed changelog on installation

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
 			"php -r \"copy('.env.example', '.env');\"",
  			"php -r \"unlink('code_of_conduct.md');\"",
  			"php -r \"unlink('Procfile');\"",
+ 			"php -r \"unlink('CHANGELOG.md');\"",
 			"php artisan key:generate",
 			"php artisan jwt:generate"
 		]
