--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
+  "dependencies": {
+    "laravel-elixir": "^3.0.0",
+    "laravel-elixir-angular": "^1.0.1"
+  },
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "laravel-elixir": "^2.0.0",
-    "laravel-elixir-angular": "^0.1.1",
-    "laravel-elixir-bower": "^0.1.0"
+    "gulp": "^3.9.0"
   }
 }
