--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
  			"php -r \"unlink('code_of_conduct.md');\"",
  			"php -r \"unlink('Procfile');\"",
  			"php -r \"unlink('CHANGELOG.md');\"",
+ 			"php -r \"unlink('.codeclimate.yml');\"",
 			"php artisan key:generate",
 			"php artisan jwt:generate"
 		]
