--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,9 @@ php:
   - 7.0
   - hhvm
 
+sudo: false
+
 install:
   - travis_retry composer create-project jadjoubran/laravel5-angular-material-starter --no-interaction --prefer-source
+
+script: vendor/bin/phpunit
