--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 /bower_components
 npm-debug.log
 .idea/
+.elasticbeanstalk
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
