trying to fix travis issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ sudo: false
 install:
   - travis_retry composer create-project jadjoubran/laravel5-angular-material-starter --no-interaction --prefer-source
 
-script: vendor/bin/phpunit
+script: ./vendor/bin/phpunit
