--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ sudo: false
 
 install:
   - travis_retry composer create-project jadjoubran/laravel5-angular-material-starter --no-interaction --prefer-source
+
+script: cd laravel5-angular-material-starter && vendor/bin/phpunit
