--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,16 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
+        "php": ">=5.5.9",
 		"laravel/framework": "5.1.*",
 		"barryvdh/laravel-debugbar": "~2.0",
 	    "tymon/jwt-auth": "0.5.*"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^4.7.6",
-		"phpspec/phpspec": "~2.1"
+        "fzaninotto/faker": "~1.4",
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~4.0",
+        "phpspec/phpspec": "~2.1"
 	},
 	"autoload": {
 		"classmap": [
