started working on dingo/api support #43

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+API_PREFIX=api
+
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
