Removing .ebextensions on fresh installs - #87

--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
  			"php -r \"unlink('CHANGELOG.md');\"",
  			"php -r \"unlink('.codeclimate.yml');\"",
  			"php -r \"unlink('.travis.yml');\"",
+            "php -r \"rmdir('.ebextensions');\"",
 			"php artisan key:generate",
 			"php artisan jwt:generate"
 		]
