--- a/composer.json
+++ b/composer.json
@@ -1,54 +1,62 @@
 {
-	"name": "jadjoubran/laravel5-angular-material-starter",
-	"description": "Laravel 5 angular material starter project with elixir setup",
-	"keywords": ["laravel", "angular", "material", "starter", "ui-router", "api"],
-	"license": "MIT",
-	"type": "project",
-	"require": {
+    "name": "jadjoubran/laravel5-angular-material-starter",
+    "description": "Laravel 5 angular material starter",
+    "keywords": ["laravel", "angular", "material", "starter", "ui-router", "api", "angular-material"],
+    "license": "MIT",
+    "type": "project",
+    "require": {
         "php": ">=5.5.9",
-		"laravel/framework": "5.1.*",
-		"barryvdh/laravel-debugbar": "~2.0",
-	    "tymon/jwt-auth": "0.5.*",
-		"dingo/api": "1.0.x@dev",
-		"barryvdh/laravel-cors": "0.7.x"
-	},
-	"require-dev": {
+        "laravel/framework": "5.1.*",
+        "barryvdh/laravel-debugbar": "~2.0",
+        "tymon/jwt-auth": "0.5.*",
+        "dingo/api": "1.0.x@dev",
+        "barryvdh/laravel-cors": "0.7.x"
+    },
+    "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1"
-	},
-	"autoload": {
-		"classmap": [
-			"database"
-		],
-		"psr-4": {
-			"App\\": "app/"
-		}
-	},
-	"autoload-dev": {
-		"classmap": [
-			"tests/TestCase.php"
-		]
-	},
-	"scripts": {
-		"post-install-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
-		],
-		"post-update-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
-		],
-		"post-create-project-cmd": [
-			"php -r \"copy('.env.example', '.env');\"",
- 			"php -r \"unlink('code_of_conduct.md');\"",
- 			"php -r \"unlink('CHANGELOG.md');\"",
- 			"php -r \"unlink('.codeclimate.yml');\"",
- 			"php -r \"unlink('.travis.yml');\"",
+    },
+    "autoload": {
+        "classmap": [
+            "database"
+        ],
+        "psr-4": {
+            "App\\": "app/"
+        }
+    },
+    "autoload-dev": {
+        "classmap": [
+            "tests/TestCase.php"
+        ]
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "php artisan clear-compiled",
+            "php artisan optimize"
+        ],
+        "pre-update-cmd": [
+            "php artisan clear-compiled"
+        ],
+        "post-update-cmd": [
+            "php artisan optimize"
+        ],
+        "post-root-package-install": [
+            "php -r \"copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "php -r \"copy('.env.example', '.env');\"",
+            "php -r \"unlink('code_of_conduct.md');\"",
+            "php -r \"unlink('CHANGELOG.md');\"",
+            "php -r \"unlink('.codeclimate.yml');\"",
+            "php -r \"unlink('.travis.yml');\"",
             "php -r \"rmdir('.ebextensions');\"",
-			"php artisan key:generate",
-			"php artisan jwt:generate"
-		]
-	}
+            "php artisan key:generate",
+            "php artisan jwt:generate"
+        ]
+    },
+    "config": {
+        "preferred-install": "dist"
+    }
 }
