--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
+  "private": true,
+  "devDependencies": {
+    "gulp": "^3.8.8"
+  },
   "dependencies": {
-    "gulp-concat": "^2.6.0",
-    "gulp-concat-sourcemap": "^1.3.1",
-    "gulp-filter": "^1.0.2",
-    "gulp-if": "^1.2.5",
-    "gulp-jshint": "^1.9.0",
-    "gulp-minify-css": "^0.3.11",
-    "gulp-ng-annotate": "^1",
-    "gulp-notify": "^2.0.0",
-    "gulp-sourcemaps": "^1",
-    "gulp-uglify": "^1",
-    "jshint-stylish": "^2",
     "laravel-elixir": "^3.0.0",
     "laravel-elixir-livereload": "^1.1.1",
+    "gulp-if": "^1.2.5",
+    "gulp-concat": "^2.6.0",
+    "gulp-filter": "^1.0.2",
+    "gulp-jshint": "^1.9.0",
+    "gulp-notify": "^2.0.0",
+    "gulp-uglify": "^1",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-sourcemaps": "^1",
+    "gulp-ng-annotate": "^1",
+    "gulp-concat-sourcemap": "^1.3.1",
+    "jshint-stylish": "^2",
     "main-bower-files": "^2.1.0"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.0"
   }
 }
