--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,16 @@ php:
 
 sudo: false
 
+services:
+  - mysql
+
+before_script:
+  - mysql -e 'create database laravel;'
+  - export DB_DATABASE=laravel
+  - export DB_USERNAME=travis
+  - export DB_PASSWORD=
+  - php artisan migrate
+
 install:
   - travis_retry composer create-project jadjoubran/laravel5-angular-material-starter=dev-master --no-interaction --prefer-source
 
