removed elastic beanstalk files

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,5 @@ npm-debug.log
 .idea/
 
 # Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
-
+.elasticbeanstalk
+.ebextensions
