--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
     "gulp": "^3.8.8"
   },
   "dependencies": {
+    "eslint": "^1.10.3",
+    "eslint-plugin-angular": "^0.15.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-sourcemap": "^1.3.1",
+    "gulp-eslint": "^1.1.1",
+    "gulp-filter": "^1.0.2",
+    "gulp-if": "^1.2.5",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-ng-annotate": "^1",
+    "gulp-notify": "^2.0.0",
+    "gulp-sourcemaps": "^1",
+    "gulp-uglify": "^1",
     "laravel-elixir": "^3.0.0",
     "laravel-elixir-livereload": "^1.1.1",
-    "gulp-if": "^1.2.5",
-    "gulp-concat": "^2.6.0",
-    "gulp-filter": "^1.0.2",
-    "gulp-jshint": "^1.9.0",
-    "gulp-notify": "^2.0.0",
-    "gulp-uglify": "^1",
-    "gulp-minify-css": "^0.3.11",
-    "gulp-sourcemaps": "^1",
-    "gulp-ng-annotate": "^1",
-    "gulp-concat-sourcemap": "^1.3.1",
-    "jshint-stylish": "^2",
     "main-bower-files": "^2.1.0"
   }
 }
