--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "gulp-filter": "^1.0.2",
     "gulp-if": "^1.2.5",
     "gulp-minify-css": "^0.3.11",
+    "gulp-minify-html": "^1.0.3",
     "gulp-ng-annotate": "^1",
+    "gulp-ng-html2js": "^0.2.0",
     "gulp-notify": "^2.0.0",
     "gulp-sourcemaps": "^1",
     "gulp-uglify": "^1",
     "laravel-elixir": "^3.0.0",
     "laravel-elixir-livereload": "^1.1.1",
     "main-bower-files": "^2.1.0",
-    "gulp-minify-html": "^1.0.3",
-    "gulp-ng-html2js": "^0.2.0"
+    "underscore": "^1.8.3"
   }
 }
