--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "eslint-plugin-angular": "^0.15.0",
     "gulp-concat": "^2.6.0",
     "gulp-concat-sourcemap": "^1.3.1",
+    "gulp-cssnano": "^2.1.0",
+    "gulp-htmlmin": "^1.3.0",
     "gulp-eslint": "^1.1.1",
     "gulp-filter": "^1.0.2",
     "gulp-if": "^1.2.5",
-    "gulp-minify-css": "^0.3.11",
-    "gulp-minify-html": "^1.0.3",
     "gulp-ng-annotate": "^1",
     "gulp-ng-html2js": "^0.2.0",
     "gulp-notify": "^2.0.0",
     "gulp-sourcemaps": "^1",
     "gulp-uglify": "^1",
-    "laravel-elixir": "^3.0.0",
+    "laravel-elixir": "^4.0.0",
     "laravel-elixir-livereload": "^1.1.1",
     "main-bower-files": "^2.1.0",
     "underscore": "^1.8.3"
