--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "babel-preset-es2015": "^6.3.13",
     "gulp": "^3.8.8",
     "webpack": "^1.12.11",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-stream": "^3.1.0"
   },
   "dependencies": {
     "eslint": "^1.10.3",
