--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,23 @@
 {
     "name": "jadjoubran/laravel5-angular-material-starter",
-    "description": "Laravel 5 angular material starter",
+    "description": "Laravel angular material starter",
     "keywords": ["laravel", "angular", "material", "starter", "ui-router", "api", "angular-material"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
-        "barryvdh/laravel-debugbar": "~2.0",
+        "laravel/framework": "5.2.*",
         "tymon/jwt-auth": "0.5.*",
-        "dingo/api": "1.0.x@dev",
         "barryvdh/laravel-cors": "0.7.x",
-        "laravelangular/generators": "~2.0"
+        "laravelangular/generators": "~2.0",
+        "dingo/api": "1.0.x@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "symfony/css-selector": "2.8.*|3.0.*",
+        "symfony/dom-crawler": "2.8.*|3.0.*"
     },
     "autoload": {
         "classmap": [
@@ -33,6 +33,17 @@
         ]
     },
     "scripts": {
+        "post-root-package-install": [
+            "php -r \"copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+           "php -r \"unlink('code_of_conduct.md');\"",
+           "php -r \"unlink('CHANGELOG.md');\"",
+           "php -r \"unlink('.codeclimate.yml');\"",
+           "php -r \"unlink('.travis.yml');\"",
+           "php artisan key:generate",
+           "php artisan jwt:generate"
+        ],
         "post-install-cmd": [
             "php artisan clear-compiled",
             "php artisan optimize"
@@ -42,18 +53,6 @@
         ],
         "post-update-cmd": [
             "php artisan optimize"
-        ],
-        "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "php -r \"copy('.env.example', '.env');\"",
-            "php -r \"unlink('code_of_conduct.md');\"",
-            "php -r \"unlink('CHANGELOG.md');\"",
-            "php -r \"unlink('.codeclimate.yml');\"",
-            "php -r \"unlink('.travis.yml');\"",
-            "php artisan key:generate",
-            "php artisan jwt:generate"
         ]
     },
     "config": {
