fixed eslint rule with es6 services

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
   "extends": "eslint:recommended",
   "plugins": ["angular"],
+  "rules": {
+    "angular/no-service-method": 0
+  },
   "env": {
     "es6": true,
     "browser": true,
