--- a/package.json
+++ b/package.json
@@ -1,32 +1,55 @@
 {
   "private": true,
   "devDependencies": {
-  	"babel-core": "^6.4.5",
-  	"babel-loader": "^6.2.1",
-  	"babel-preset-es2015": "^6.3.13",
-  	"gulp": "^3.8.8",
-  	"webpack": "^1.12.11",
-  	"webpack-dev-server": "^1.14.1",
-  	"webpack-stream": "^3.1.0"
+    "angular-mocks": "^1.5.2",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "gulp": "^3.8.8",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
+    "karma-ngannotate-preprocessor": "^0.1.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "laravel-elixir-karma": "^0.2.2",
+    "phantomjs": "^2.1.3",
+    "phantomjs-prebuilt": "^2.1.6",
+    "webpack": "^1.12.11",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-stream": "^3.1.0",
+    "babel": "^4.0.2",
+    "babelify": "^5.0.3",
+    "browserify": "~8.1.3",
+    "gulp-add-src": "^0.2.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-sourcemaps": "~1.3.0",
+    "gulp-uglify": "~1.1.0",
+    "gulp-util": "^3.0.3",
+    "karma-babel-preprocessor": "~4.0.0",
+    "karma-browserify": "^4.0.0",
+    "stringify": "^3.1.0",
+    "vinyl-buffer": "~1.0.0",
+    "vinyl-source-stream": "~1.0.0"
   },
   "dependencies": {
-  	"eslint": "^1.10.3",
-  	"eslint-plugin-angular": "^0.15.0",
-  	"gulp-concat": "^2.6.0",
-  	"gulp-concat-sourcemap": "^1.3.1",
-  	"gulp-eslint": "^1.1.1",
-  	"gulp-filter": "^1.0.2",
-  	"gulp-htmlmin": "^1.3.0",
-  	"gulp-if": "^1.2.5",
-  	"gulp-minify-css": "^1.2.3",
-  	"gulp-ng-annotate": "^1",
-  	"gulp-ng-html2js": "^0.2.0",
-  	"gulp-notify": "^2.0.0",
-  	"gulp-sourcemaps": "^1",
-  	"gulp-uglify": "^1",
-  	"laravel-elixir": "^4.0.0",
-  	"laravel-elixir-livereload": "^1.1.1",
-  	"main-bower-files": "^2.1.0",
-  	"underscore": "^1.8.3"
+    "eslint": "^1.10.3",
+    "eslint-plugin-angular": "^0.15.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-sourcemap": "^1.3.1",
+    "gulp-eslint": "^1.1.1",
+    "gulp-filter": "^1.0.2",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-if": "^1.2.5",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-ng-annotate": "^1",
+    "gulp-ng-html2js": "^0.2.0",
+    "gulp-notify": "^2.0.0",
+    "gulp-sourcemaps": "^1",
+    "gulp-uglify": "^1",
+    "laravel-elixir": "^4.0.0",
+    "laravel-elixir-livereload": "^1.1.1",
+    "main-bower-files": "^2.1.0",
+    "underscore": "^1.8.3"
   }
 }
