--- a/package.json
+++ b/package.json
@@ -2,18 +2,6 @@
   "private": true,
   "devDependencies": {
     "angular-mocks": "^1.5.2",
-    "babel": "^4.0.2",
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babelify": "^5.0.3",
-    "browserify": "~8.1.3",
-    "gulp": "^3.8.8",
-    "gulp-add-src": "^0.2.0",
-    "gulp-concat": "^2.5.2",
-    "gulp-sourcemaps": "~1.3.0",
-    "gulp-uglify": "~1.1.0",
-    "gulp-util": "^3.0.3",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-babel-preprocessor": "~4.0.0",
@@ -28,12 +16,24 @@
     "phantomjs-prebuilt": "^2.1.6",
     "stringify": "^3.1.0",
     "vinyl-buffer": "~1.0.0",
-    "vinyl-source-stream": "~1.0.0",
-    "webpack": "^1.12.11",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-stream": "^3.1.0"
+    "vinyl-source-stream": "~1.0.0"
   },
   "dependencies": {
+    "gulp-add-src": "^0.2.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-sourcemaps": "~1.3.0",
+    "gulp-uglify": "~1.1.0",
+    "gulp-util": "^3.0.3",
+    "babel": "^4.0.2",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^5.0.3",
+    "browserify": "~8.1.3",
+    "gulp": "^3.8.8",
+    "webpack": "^1.12.11",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-stream": "^3.1.0",
     "eslint": "^1.10.3",
     "eslint-plugin-angular": "^0.15.0",
     "gulp-concat": "^2.6.0",
