specify npm version in package.json to fix failing tests

--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "laravel-elixir-livereload": "^1.1.1",
     "main-bower-files": "^2.1.0",
     "underscore": "^1.8.3"
+  },
+  "engines": {
+    "npm": ">=3"
   }
 }
