--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ng-describe": "^1.8.0",
     "phantomjs-prebuilt": "^2.1.6",
     "stringify": "^3.1.0",
+    "sw-precache": "^3.2.0",
     "vinyl-buffer": "~1.0.0",
     "vinyl-source-stream": "~1.0.0"
   },
