--- a/package.json
+++ b/package.json
@@ -19,23 +19,17 @@
     "vinyl-source-stream": "~1.0.0"
   },
   "dependencies": {
-    "gulp-add-src": "^0.2.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-sourcemaps": "^1",
-    "gulp-uglify": "^1",
-    "gulp-util": "^3.0.3",
     "babel": "^4.0.2",
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^5.0.3",
     "browserify": "~8.1.3",
-    "gulp": "^3.8.8",
-    "webpack": "^1.12.11",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-stream": "^3.1.0",
     "eslint": "^1.10.3",
     "eslint-plugin-angular": "^0.15.0",
+    "gulp": "^3.8.8",
+    "gulp-add-src": "^0.2.0",
+    "gulp-concat": "^2.6.0",
     "gulp-concat-sourcemap": "^1.3.1",
     "gulp-cssnano": "^2.1.1",
     "gulp-eslint": "^1.1.1",
@@ -45,9 +39,16 @@
     "gulp-ng-annotate": "^1",
     "gulp-ng-html2js": "^0.2.0",
     "gulp-notify": "^2.0.0",
+    "gulp-sourcemaps": "^1",
+    "gulp-uglify": "^1",
+    "gulp-util": "^3.0.3",
     "laravel-elixir": "^4.2.1",
     "main-bower-files": "^2.1.0",
-    "underscore": "^1.8.3"
+    "sw-toolbox": "^3.2.1",
+    "underscore": "^1.8.3",
+    "webpack": "^1.12.11",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-stream": "^3.1.0"
   },
   "engines": {
     "npm": ">=3"
