Fixes issues #356 and #358 (#361)
* fixed package.json issue #353

* test travis build

* fixed package.json issue #353

* add composer install and move install commands to install step

* move php artisan migrate to script step

* move php artisan key and jwg generation to composer post installation phase

* replace create-project phases by install ones

* fix previous commit

* [fix] issue #358: sassify critical inlined style for pwa and add gulp task to handle it

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_script:
   - export DB_PASSWORD=
 
 install:
-  - travis_retry composer create-project jadjoubran/laravel5-angular-material-starter=dev-master --no-interaction --prefer-source
+  - composer install && npm install -g gulp bower && npm install && bower install
 
-script: cd laravel5-angular-material-starter && npm install -g gulp bower && npm install && bower install && php artisan migrate --force && gulp && vendor/bin/phpunit
+script:  
+  - php artisan migrate --force && gulp && vendor/bin/phpunit
