--- a/composer.json
+++ b/composer.json
@@ -33,20 +33,18 @@
         ]
     },
     "scripts": {
-        "post-root-package-install": [
+        "pre-install-cmd": [
             "php -r \"copy('.env.example', '.env');\""
         ],
-        "post-create-project-cmd": [
+        "post-install-cmd": [
            "php -r \"unlink('code_of_conduct.md');\"",
            "php -r \"unlink('CHANGELOG.md');\"",
            "php -r \"unlink('.codeclimate.yml');\"",
            "php -r \"unlink('.travis.yml');\"",
+           "php artisan clear-compiled",
+           "php artisan optimize",
            "php artisan key:generate",
            "php artisan jwt:generate"
-        ],
-        "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
