[fix] avoid .env overwrite after a second composer install (#364)
* fixed package.json issue #353

* test travis build

* fixed package.json issue #353

* add composer install and move install commands to install step

* move php artisan migrate to script step

* move php artisan key and jwg generation to composer post installation phase

* replace create-project phases by install ones

* fix previous commit

* [fix] issue #358: sassify critical inlined style for pwa and add gulp task to handle it

* [fix] fix composer deletion issue, consider key/jwt on travis ci

* [fix] add .env copy to travis build

* [fix] revert all changes on composer.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,13 @@ before_install:
   - nvm install 5.1
 
 before_script:
+  - cp .env.example .env
   - mysql -e 'create database laravel;'
   - export DB_DATABASE=laravel
   - export DB_USERNAME=travis
   - export DB_PASSWORD=
+  - php artisan key:generate
+  - php artisan jwt:generate
 
 install:
   - composer install && npm install -g gulp bower && npm install && bower install
