--- a/composer.json
+++ b/composer.json
@@ -33,18 +33,20 @@
         ]
     },
     "scripts": {
-        "pre-install-cmd": [
+        "post-root-package-install": [
             "php -r \"copy('.env.example', '.env');\""
         ],
-        "post-install-cmd": [
+        "post-create-project-cmd": [
            "php -r \"unlink('code_of_conduct.md');\"",
            "php -r \"unlink('CHANGELOG.md');\"",
            "php -r \"unlink('.codeclimate.yml');\"",
            "php -r \"unlink('.travis.yml');\"",
-           "php artisan clear-compiled",
-           "php artisan optimize",
            "php artisan key:generate",
            "php artisan jwt:generate"
+        ],
+        "post-install-cmd": [
+           "php artisan clear-compiled",
+           "php artisan optimize"
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
