--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,10 @@
 * text=auto
 *.css linguist-vendored
 *.less linguist-vendored
+
+.codeclimate.yml export-ignore
+.editorconfig export-ignore
+.gitattributes export-ignore
+.github export-ignore
+.travis.yml export-ignore
+.varci.yml export-ignore
