--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
+    "eslint-plugin-angular": "^1.3.1",
     "gulp": "^3.9.1",
+    "gulp-concat-sourcemap": "^1.3.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-filter": "^4.0.0",
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-9",
+    "laravel-elixir-eslint": "^3.0.0",
+    "laravel-elixir-ng-annotate": "^1.0.1",
     "laravel-elixir-vue": "^0.1.4",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.14.0",
+    "main-bower-files": "^2.13.1",
+    "sw-precache": "^4.0.0",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3"
   }
