--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
+    "babel-core": "^6.16.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
     "bootstrap-sass": "^3.3.7",
     "eslint-plugin-angular": "^1.3.1",
     "gulp": "^3.9.1",
