--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "tymon/jwt-auth": "0.5.*",
-        "laravelangular/generators": "2.7.2",
+        "laravelangular/generators": "2.7.*",
         "irazasyed/jwt-auth-guard": "^1.0",
         "barryvdh/laravel-cors": "^0.8.2"
     },
