--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         ],
         "post-create-project-cmd": [
             "php artisan key:generate",
-            "php artisan jwt:generate"
+            "php artisan jwt:secret"
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
