--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,8 @@
     "restangular": "~1.5.2",
     "angular-loading-bar": "~0.9.0",
     "satellizer": "^0.14.0"
+  },
+  "resolutions": {
+    "angular": "1.6.7"
   }
 }
